--- a/templates/base.html
+++ b/templates/base.html
@@ -207,7 +207,7 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-<script>
+<!-- <script>
     
   let ClickedA = false;
 
@@ -221,7 +221,7 @@
     });
 });
 
-</script>
+</script> -->
 </body>
 
 </html>
