--- a/templates/base.html
+++ b/templates/base.html
@@ -193,7 +193,7 @@
     <div class="footer-column">
         <h4>Ayuda</h4>
         <ul>
-            <li class="formulario-contact-footer"><a href="#">Formulario de contacto</a></li>
+            <li class="formulario-contact-footer"><a href="{% url 'formulario_contacto' %}">Formulario de contacto</a></li>
         </ul>
     </div>
 </div>
