--- a/orden/static/css/detalle_compra.css
+++ b/orden/static/css/detalle_compra.css
@@ -22,13 +22,13 @@ p {
     margin: 8px 0;
 }
 
-ul {
+.lista-productos {
     list-style: none;
     padding-left: 0;
     margin-top: 15px;
 }
 
-li {
+.li-lista-productos {
     background: linear-gradient(135deg, rgba(0, 212, 255, 0.1) 0%, rgba(131, 56, 236, 0.1) 100%);
     border: 1px solid rgba(0, 212, 255, 0.2);
     padding: 10px;
