--- a/orden/templates/detalle_compra.html
+++ b/orden/templates/detalle_compra.html
@@ -14,11 +14,13 @@
   <p>Fecha de pago: {{ orden.fecha_pagada|date:"d/m/Y H:i" }}</p>
 
   <h4>Productos:</h4>
-  <ul>
+  <ul class="lista-productos">
     {% for item in orden.productos_orden.all %}
-      <li>
+      <li class="li-lista-productos">
         <img src="{{ item.producto.main_image.url }}" alt="{{ item.producto.name }}" width="50px" height="50px">
         {{ item.producto.name }} x{{ item.quantity }} - {{ item.producto.price | format_price }}
+        {% widthratio item.quantity 1 item.producto.price as subtotal %}
+        {{ subtotal|format_price }}
       </li>
     {% endfor %}
   </ul>
