--- a/profiles/static/css/editar_perfil.css
+++ b/profiles/static/css/editar_perfil.css
@@ -27,36 +27,44 @@ label {
     font-weight: bold;
     display: block;
     margin-bottom: 5px;
-    color: #06B6D4;
+    color: #00d4ff;
 }
 
 input, select{
     width: 100%;
     padding: 10px;
-    background-color: #1E1F36;
-    border: 2px solid #06B6D4;
+    background: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 8px;
     color: #fff;
-    -webkit-appearance: none; 
-    -moz-appearance: none; 
+    transition: all 0.3s ease !important;
 }
 
 input::placeholder {
-    color: #ccc;
+    color: rgba(255, 255, 255, 0.6);
 }
 
-input:focus {
-    border-color: #06B6D4;
-    box-shadow: 0 0 8px rgba(0, 188, 212, 0.5);
-    outline: none; 
+input:focus,
+select:focus {
+    outline: none;
+    border-color: #00d4ff;
+    box-shadow: 0 0 10px rgba(0, 212, 255, 0.3);
+    background: rgba(255, 255, 255, 0.15);
+    transform: scale(1.02);
+    transition: transform 0.2s ease;
+}
+select option {
+    background: #2a3c72;
+    color: white;
 }
 
 select {
     padding-right: 30px; /* Añadir espacio para el ícono de la flecha */
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12"><path d="M2 4l4 4 4-4z" fill="white"/></svg>'); /* Flecha personalizada */
+    background: #2a3c72;
     background-position: right 10px center;
     background-repeat: no-repeat;
     background-size: 12px 12px;
+    transition: all 0.3s ease;
 }
 
 .btn {
