--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -8,7 +8,7 @@
   
 
     <div style="display: flex; justify-content: center; align-items: center; margin-top: -1%;">
-        <a style="text-decoration: none;" href="{% url 'index' %}"><h2 style="color: #17F0D2; font-size: 40px;">Byte & Beat</h2></a>
+        <a style="text-decoration: none;" href="{% url 'index' %}"><h2 style="color: #00d4ff ; font-size: 40px;">Byte & Beat</h2></a>
     </div>
     
 
@@ -30,13 +30,12 @@
                                 placeholder="Contraseña" required>
                         </div>
                         <div class="mt-4 mb-4" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
-                            <a style="color: #17F0D2; text-decoration: none;" href="{% url 'register' %}">Registrarse</a>
-                            <a style="color: #17F0D2; text-decoration: none;" href="{% url 'password_reset' %}">Recuperar contraseña</a>
+                            <a style="color: #00d4ff; text-decoration: none;" href="{% url 'register' %}">Registrarse</a>
+                            <a style="color: #00d4ff; text-decoration: none;" href="{% url 'password_reset' %}">Recuperar contraseña</a>
                         </div>
                         
-                        <hr style="color: #17F0D2;">
-                        <button type="submit" class="btn w-100 py-2"
-                            style="margin-bottom: 20px; background-color: #17F0D2; color: #1E1F36; font-weight: bold;">
+                        <hr style="color: #00d4ff;">
+                        <button type="submit" class="btn w-100 py-2">
                             Iniciar Sesion
                         </button>
                     </form>
