--- a/users/templates/reset_password/password_reset.html
+++ b/users/templates/reset_password/password_reset.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <div style="display: flex; justify-content: center; align-items: center; margin-top: -1%;">
         <a style="text-decoration: none;" href="{% url 'index' %}">
-            <h2 style="color: #17F0D2; font-size: 40px;">Byte & Beat</h2>
+            <h2 style="color: #00d4ff; font-size: 40px;">Byte & Beat</h2>
         </a>
     </div>
 
@@ -23,7 +23,7 @@
                                 <br>Ingrese su dirección de correo electrónico y le enviaremos instrucciones para configurar una nueva contraseña.</p>
                         </div>
                         
-                        <div class="input-group" style="color: white;">
+                        <div class="input-group">
                             {{ form.email }}
                         </div>
                         {% if form.email.errors %}
@@ -36,8 +36,7 @@
 
                         <hr style="color: #17F0D2;">
                     
-                        <button type="submit" class="submit-btn w-100 py-2"
-                            style="background-color: #17F0D2; color: #1E1F36; font-weight: bold;">
+                        <button type="submit" class="submit-btn btn w-100 py-2">
                             Enviar correo de recuperación
                         </button>
                     </form>
