--- a/users/templates/reset_password/password_reset_confirm.html
+++ b/users/templates/reset_password/password_reset_confirm.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% include 'modals/alert_modal.html' %}
+{% include 'modals/alert_modal_user.html' %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -16,7 +16,7 @@
 <body style="background: #1E1F36;">
     <div style="display: flex; justify-content: center; align-items: center; margin-top: 2%;">
         <a style="text-decoration: none;" href="{% url 'index' %}">
-            <h2 style="color: #17F0D2; font-size: 40px;">Byte & Beat</h2>
+            <h2 style="color: #00d4ff; font-size: 40px;">Byte & Beat</h2>
         </a>
     </div>
 
@@ -25,7 +25,7 @@
             <div class="card">
                 <div class="card-body">
                     {% if validlink %}
-                    <h3 style="color: #17F0D2;">Nueva Contraseña</h3>
+                    <h3 style="color: #00d4ff;">Nueva Contraseña</h3>
 
                     <form method="post">
                         {% csrf_token %}
@@ -33,7 +33,7 @@
                         <!-- Nueva contraseña -->
                         <div class="form-group"
                             style="display: flex; flex-direction: column; justify-content: center; align-items: center; width: 100%; margin-top: 10%;">
-                            <label for="id_new_password1" style="color: #17F0D2; margin-bottom: 3%;">Nueva
+                            <label for="id_new_password1" style="color: #00d4ff; margin-bottom: 3%;">Nueva
                                 Contraseña:</label>
                             <input class="input-reset" type="password" name="new_password1" class="form-control"
                                 placeholder="Nueva Contraseña"
@@ -49,12 +49,11 @@
 
                         <!-- Confirmar nueva contraseña -->
                         <div class="form-group"
-                            style="display: flex; flex-direction: column; justify-content: center; align-items: center; width: 100%; margin-top: 10%;">
-                            <label for="id_new_password2" style="color: #17F0D2; margin-bottom: 3%;">Confirmar
+                            style="display: flex; flex-direction: column; justify-content: center; align-items: center; width: 100%;">
+                            <label for="id_new_password2" style="color: #00d4ff;">Confirmar
                                 Contraseña:</label>
-                            <input class="input-reset"  type="password" name="new_password2" class="form-control"
-                                placeholder="Confirmar Contraseña"
-                                 />
+                            <input class="input-reset" style="margin-top: -1px;"  type="password" name="new_password2" class="form-control"
+                                placeholder="Confirmar Contraseña"/>
                             {% if form.new_password2.errors %}
                             <div style="color: #DC3545; padding-top: 5px;">
                                 {% for error in form.new_password2.errors %}
@@ -64,11 +63,10 @@
                             {% endif %}
                         </div>
 
-                        <hr style="color: #17F0D2;">
+                        <hr style="color: #00d4ff;">
 
                         <!-- Botón para enviar la nueva contraseña -->
-                        <button type="submit" class="btn w-100 py-2"
-                            style="background-color: #17F0D2; color: #1E1F36; font-weight: bold;">
+                        <button type="submit" class="btn-cambiar-passwo w-100 py-2">
                             Cambiar mi contraseña
                         </button>
                     </form>
