--- a/templates/base.html
+++ b/templates/base.html
@@ -112,7 +112,7 @@
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand mb-0 h1 fs-3" style="color: #06B6D4;" href="{% url 'index' %}">Byte & Beat</a>
+                <a class="navbar-brand mb-0 h1 fs-3" style="color: #06B6D4;" href="{% url 'index' %}"><img src="https://res.cloudinary.com/dg4dhdyzj/image/upload/v1751122185/BEAT_2_szzls8.png" style="max-width: 50px; height: auto;" alt="Byte & Beat Logo" lazy></a>
                 </div>
 
                 <div class="collapse navbar-collapse justify-content-center order-3 order-lg-2 fs-5" id="navbarNav">
@@ -169,7 +169,7 @@
     <!-- Columna 1: Información de la empresa -->
     <div class="footer-column">
         <div class="footer-logo">
-            <h3 style="color: #06B6D4; margin: 0;">Byte & Beat</h3>
+            <h3 style=" margin: 0;"><img src="https://res.cloudinary.com/dg4dhdyzj/image/upload/v1751122185/BEAT_2_szzls8.png" style="max-width: 100px; height: auto;" alt="Byte & Beat Logo" lazy></h3>
         </div>
         <div class="company-info">
             <p>Tienda especializada en productos tecnológicos de alta calidad para músicos y entusiastas de la tecnología.</p>
