--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -33,10 +33,7 @@
             <!-- Header del sidebar -->
             <div class="flex justify-between items-center p-4">
                 <div class="flex items-center space-x-2">
-                    <div class="w-8 h-8 bg-primary-blue rounded flex items-center justify-center">
-                        <span class="text-sm font-bold">SG</span>
-                    </div>
-                    <span class="font-semibold sidebar-text">Byte & Beat</span>
+                    <span class="font-semibold sidebar-text"><img src="https://res.cloudinary.com/dg4dhdyzj/image/upload/v1751122185/BEAT_2_szzls8.png" style="max-width: 100px; height: auto;" alt="Byte & Beat Logo" lazy></span>
                 </div>
                 <button onclick="toggleSidebar()" class="text-white hover:text-gray-300 xl:hidden">
                     <i class="fas fa-times text-xl"></i>
