--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="{% static 'css/register.css' %}">
 
 <div style="display: flex; justify-content: center; align-items: center; margin-top: -1%;">
-    <a style="text-decoration: none;" href="{% url 'index' %}"><h2 style="color: #00d4ff; font-size: 40px;">Byte & Beat</h2></a>
+    <a style="text-decoration: none;" href="{% url 'index' %}"><img src="https://res.cloudinary.com/dg4dhdyzj/image/upload/v1751122185/BEAT_2_szzls8.png" style="max-width: 100px; height: auto;" alt="Byte & Beat Logo" lazy></a>
 </div>
 
 <section class="register-wrapper" style="margin-bottom: 100px;">
