--- a/dashboard/templates/dashboard_ordens.html
+++ b/dashboard/templates/dashboard_ordens.html
@@ -176,7 +176,7 @@
     </div>
 
     <!-- Contenedor del gráfico -->
-    <div id="chart4" class="w-full h-[430px] flex-shrink-0"></div>
+    <div id="chart4" class="w-[100%] h-[430px] flex-shrink-0"></div>
     </div>
 
 
