--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -66,6 +66,14 @@
                     <i class="fas fa-tachometer-alt h-6 w-6 text-gray-300 mr-3"></i>
                     <span class="sidebar-text">Dashboard</span>
                 </a>
+                <a href="{% url 'index' %}" class="sidebar-link flex items-center px-4 py-3 text-gray-300 hover:bg-gray-700 transition-colors">
+                    <i class="fas fa-link h-6 w-6 text-gray-300 mr-3"></i>
+                    <span class="sidebar-text">Ir a sitio web</span>
+                </a>
+                <a href="{% url 'logout' %}" class="sidebar-link flex items-center px-4 py-3 text-gray-300 hover:bg-gray-700 transition-colors">
+                    <i class="fas fa-sign-out-alt h-6 w-6 text-gray-300 mr-3"></i>
+                    <span class="sidebar-text">Cerrar Sesión</span>
+                </a>
             </nav>
         </div>
 
