--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -59,7 +59,7 @@
 
                 <a href="{% url 'orden_list_report' %}" class="sidebar-link flex items-center px-4 py-3 text-gray-300 hover:bg-gray-700 transition-colors">
                     <i class="fas fa-chart-line h-6 w-6 text-gray-300 mr-3"></i>
-                    <span class="sidebar-text">Reportes de Ventas</span>
+                    <span class="sidebar-text">Reportes de Pedidos</span>
                 </a>
 
                 <a href="{% url 'dashboard_admin' %}" class="sidebar-link flex items-center px-4 py-3 text-gray-300 hover:bg-gray-700 transition-colors">
